# set-monad

./: .travis.yml  LICENSE  Tests.hs  default.nix  set-monad.cabal
Data/Set/: Monad.hs
