name:               set-monad
version:            0.1.0.0
synopsis:           Set monad
description:        Set monad
license:            BSD3
license-file:       LICENSE
author:             George Giorgidze
maintainer:         giorgidze@gmail.com
category:           Data
build-type:         Simple
cabal-version:      >=1.8

library
  exposed-modules:  Data.Set.Monad
  build-depends:    base > 4, deepseq, containers
  ghc-options:      -Wall